# sgrvr

./: CMakeLists.txt  README.md
cmake/: FindVirvo.cmake
src/: CMakeLists.txt  client.cpp  serialization.h  server.cpp
src/async/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  message.cpp  message.h
